KListViewSearchLine didn't unhide the right items. Fix that with a new algorithm. Thanks to Richard Smith for his help. He reviewed a earlier patch and ensured that the algorithm is alot more readable.

BUG: 91476



svn path=/trunk/KDE/kdelibs/; revision=433828